Fix vertical alignment of saved item

--- a/src/styles/_Saved.scss
+++ b/src/styles/_Saved.scss
@@ -25,6 +25,7 @@
     375px: 'column',
   ));
   align-items: center;
+  justify-content: center;
   text-align: center;
   overflow-y: scroll;
 }
